added skeleton menspage file

--- a/mens.html
+++ b/mens.html
@@ -1,12 +1,284 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <div>
+      <h3>Home</h3>
+      <p>/</p>
+      <h3>Men CLothing</h3>
+    </div>
+    <div class="banner">
+      <img
+        src="https://images.bewakoof.com/uploads/category/desktop/freegift_desktop1440x250-1654857837.gif"
+        alt=""
+      />
+    </div>
+    <div>
+      <h1>Men Clothing</h1>
+    </div>
+    <h4>FILTERS</h4>
+    <div class="filters">
+      <label for="category"
+        >Category
+        <select name="Category" id="category">
+          <option value="tshirt">T-Shirt</option>
+          <option value="boxer">Boxer</option>
+          <option value="shorts">Shorts</option>
+          <option value="shirt">Shirt</option>
+          <option value="kurta">Kurta</option>
+          <option value="joggers">Joggers</option>
+          <option value="trackpant">Track Pant</option>
+          <option value="sweatshirt">Sweatshirt</option>
+          <option value="pyjama">Pyjama</option>
+          <option value="vest">Vest</option>
+          <option value="jeans">Jeans</option>
+          <option value="hoodies">Hoodies</option>
+          <option value="coordinates">Co-Ordinates</option>
+          <option value="jacket">Jacket</option>
+          <option value="brief">Brief</option>
+          <option value="trunk">Trunk</option>
+          <option value="loungepants">Lounge Pants</option>
+          <option value="casualpants">Casual Pants</option>
+          <option value="trousers">Trousers</option>
+          <option value="kurtaset">Kurta Set</option>
+          <option value="tshirtPyjamaset">T-Shirt and Pyjama set</option>
+          <option value="sweater">Sweater</option>
+          <option value="chino">Chino</option>
+          <option value="tshirtShortset">T-Shirt & Shorts SET</option>
+          <option value="nightsuites">Nightsuits</option>
+          <option value="loungeshorts">Lounge Shorts</option>
+          <option value="shirtShortSet">Shirt & Shorts Set</option>
+          <option value="clothmask">Cloth Mask</option>
+          <option value="3-4short">3-4 Th Shorts</option>
+          <option value="tracksuit">TrackSuit</option>
+          <option value="blazer">Blazer</option>
+          <option value="pant">Pant</option>
+          <option value="poutmask">Protective Outdoor Mask</option>
+          <option value="denim">Denim</option>
+          <option value="nehrujacket">Nehru Jacket</option>
+          <option value="tshirt&joggeset">T-Shirt & Jogger Set</option>
+          <option value="hoodieandshortset">Hoodie And Shorts Set</option>
+        </select>
+      </label>
+      <label for="sizes"
+        >Sizes
+        <select name="sizes" id="sizes">
+          <option value="XS">XS</option>
+          <option value="S">S</option>
+          <option value="M">M</option>
+          <option value="L">L</option>
+          <option value="XL">XL</option>
+          <option value="2XL">2XL</option>
+          <option value="3XL">3XL</option>
+          <option value="4XL">4XL</option>
+          <option value="5XL">5XL</option>
+          <option value="6XL">6XL</option>
+          <option value="28">28</option>
+          <option value="30">30</option>
+          <option value="32">32</option>
+          <option value="34">34</option>
+          <option value="36">36</option>
+          <option value="38">38</option>
+          <option value="40">40</option>
+          <option value="42">42</option>
+          <option value="44">44</option>
+          <option value="46">46</option>
+          <option value="48">48</option>
+          <option value="50">50</option>
+          <option value="52">52</option>
+          <option value="54">54</option>
+        </select>
+      </label>
+      <label for="brand"
+        >Brand
+        <select name="brand" id="brand">
+          <option value="bewakoof">Bewakoof</option>
+          <option value="snitch">Snitch</option>
+          <option value="alics">Alics</option>
+          <option value="hangup">Hangup</option>
+          <option value="campussutra">Campus Sutra</option>
+          <option value="dillinger">Dillinger</option>
+          <option value="diffofopn">Difference of Opinion</option>
+          <option value="breakbounce">Breakbounce</option>
+          <option value="alstyle">Alstyle</option>
+          <option value="joven">Joven</option>
+          <option value="seedesigns">See Designs</option>
+          <option value="urbanscottish">Urban Scottish</option>
+          <option value="fugazee">Fugazee</option>
+          <option value="urbanhug">Urban Hug</option>
+          <option value="smugglerz">Smugglerz</option>
+          <option value="almo">Almo</option>
+          <option value="quarantine">Quarantine</option>
+          <option value="bushirt">Bushirt</option>
+          <option value="radmadbad">Rad.Mad.Bad</option>
+          <option value="conditionsapply">Conditions Apply</option>
+          <option value="fullyfilmy">Fully Filmy</option>
+          <option value="highstar">High Star</option>
+          <option value="craxystore">CraxyStore</option>
+          <option value="rigo">Rigo</option>
+          <option value="perfkt-u">Perfkt-U</option>
+          <option value="playbybewakoof">Play By Bewakoof</option>
+          <option value="whatsdown">What's Down</option>
+          <option value="khadio">Khadio</option>
+          <option value="wtfunk">Wtfunk</option>
+          <option value="tailorandcircus">Tailor & Circus</option>
+          <option value="bluetyga">Blue Tyga</option>
+          <option value="cooft">Cooft</option>
+          <option value="adro">Adro</option>
+          <option value="mezmoda">Mezmoda</option>
+          <option value="thinkbasicfolks">Think Basic Folks</option>
+          <option value="fansarmy">Fans Army</option>
+          <option value="stylequotient">Style quotient</option>
+          <option value="redwolf">Redwolf</option>
+          <option value="shivitz">Shivitz</option>
+          <option value="xyxx">Xyxx</option>
+          <option value="fancode">Fancode</option>
+          <option value="brownmocha">Brown Mocha</option>
+          <option value="kotty">Kotyy</option>
+          <option value="sexybeast">Sexy Beast</option>
+          <option value="rozesin">Rozes.In</option>
+          <option value="instafabplus">Instafab Plus</option>
+          <option value="toffcraft">Toffcraft</option>
+          <option value="nammur">Nammur</option>
+          <option value="thebriefstory">Thebriefsstory</option>
+        </select>
+      </label>
+      <label for="color"
+        >Color
+        <select name="color" id="colors">
+          <div>black</div>
+          <div>blue</div>
+          <div>white</div>
+          <div>grey</div>
+          <div>green</div>
+          <div>red</div>
+          <div>yellow</div>
+          <div>pink</div>
+          <div>brown</div>
+          <div>darkbrown</div>
+          <div>orange</div>
+          <div>wheat</div>
+          <div>violet</div>
+        </select>
+      </label>
+      <label for="design">Design
+        <select name="design" id="design">Design
+            <option value="solid">Solid</option>
+            <option value="printed">Printed</option>
+            <option value="graphicprint">Graphic Print</option>
+            <option value="typography">Typography</option>
+            <option value="plain">Plain</option>
+            <option value="alloverprinted">All Over Printed</option>
+            <option value="colorblock">Color Block</option>
+            <option value="striped">Striped</option>
+            <option value="aop">Aop</option>
+            <option value="checked">Checked</option>
+            <option value="colourblocked">Colourblocked</option>
+            <option value="checkered">Checkered</option>
+            <option value="tieanddye">Tie & Dye</option>
+            <option value="washed">Washed</option>
+            <option value="floralprint">Floral Print</option>
+            <option value="alloverprint">All Over Print</option>
+            <option value="embroidered">Embroidered</option>
+            <option value="abstract">Abstract</option>
+            <option value="hyperprint">Hyper Print</option>
+            <option value="selfdesign">Self Design</option>
+            <option value="camouflage">Camouflage</option>
+            <option value="stripe">Stripe</option>
+            <option value="geometricprint">Geometric Print</option>
+            <option value="cutandsew">Cut & Sew</option>
+            <option value="polkaprint">Polka Print</option>
+            <option value="animalprint">Animal Print</option>
+            <option value="woven">Woven</option>
+            <option value="jacquard">Jacquard</option>
+            <option value="midwashed">Mid Washed</option>
+            <option value="textured">Textured</option>
+            <option value="chestprint">Chest Print</option>
+            <option value="ombre">Ombre</option>
+        </select>
+      </label>
+      <label for="fit">Fit
+        <select name="fit" id="fit">
+            <option value="regularfit">Regular Fit</option>
+            <option value="slimfit">Slim Fit</option>
+            <option value="oversized">Oversized</option>
+            <option value="relaxedfit">Relaxed Fit</option>
+            <option value="skinnyfit">Skinny Fit</option>
+            <option value="slim">Slim</option>
+            <option value="loosefit">Loose Fit</option>
+            <option value="regular">Regular</option>
+            <option value="superskinnyfit">Super Skinny Fit</option>
+            <option value="loose">Loose</option>
+        </select>
+      </label>
+      <label for="sleeve">Sleeve
+        <select name="sleeve" id="sleeve">
+            <option value="halfsleeve">Half Sleeve</option>
+            <option value="fullsleeve">Full Sleeve</option>
+            <option value="sleeveless">Sleeveless</option>
+            <option value="shortsleeve">Short Sleeve</option>
+            <option value="longsleeve">Long Sleeve</option>
+            <option value="raglansleeve">Raglan Sleeve</option>
+        </select>
+      </label>
+      <label for="neck">Neck
+        <select name="neck" id="neck">
+            <option value="roundneck">Round Neck</option>
+            <option value="mandarincollar">Mandarin Collar</option>
+            <option value="hood">Hood</option>
+            <option value="spreadcollar">Spread Collar</option>
+            <option value="polo">Polo</option>
+            <option value="collar">Collar</option>
+            <option value="shirtcollar">Shirt Collar</option>
+            <option value="henley">Henley</option>
+            <option value="henleyneck">Henley Neck</option>
+            <option value="mock">Mock</option>
+            <option value="lapelcollar">Lapel Collar</option>
+            <option value="crewneck">Crew Neck</option>
+            <option value="vneck">V-Neck</option>
+            <option value="standcollar">Stand Collar</option>
+            <option value="highneck">High Neck</option>
+            <option value="collared">Collared</option>
+            <option value="turtleneck">Turtle Neck</option>
+            <option value="scoopneck">Scoop Neck</option>
+            <option value="collarless">Collarless</option>
+            <option value="uneck">U Neck</option>
+        </select>
+      </label>
+      <label for="ratings">Ratings
+        <select name="ratings" id="ratings">
+            <option value="4.5>">4.5 and Above</option>
+            <option value="4>">4 and Above</option>
+            <option value="3.5>">3.5 and Above</option>
+            <option value="3>">3 and Above</option>
+            <option value="2.5>">2.5 and Above</option>
+        </select>
+      </label>
+      <label for="discount">Discount
+        <select name="discount" id="discount">
+            <option value="10%>">10% Or More</option>
+            <option value="20%>">20% Or More</option>
+            <option value="30%>">30% Or More</option>
+            <option value="40%>">40% Or More</option>
+            <option value="50%>">50% Or More</option>
+            <option value="60%>">60% Or More</option>
+            <option value="70%>">70% Or More</option>
+        </select>
+      </label>
+      <label for="sortby">Sort By
+        <select name="sortby" id="sort">
+            <option value="popular">Popular</option>
+            <option value="new">New</option>
+            <option value="price_htol">Price : High to Low</option>
+            <option value="price_ltoh">Price : Low to High</option>
+        </select>
+      </label>
+
+    </div>
+  </body>
 </html>
