--- a/mens.html
+++ b/mens.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="mens.css" />
   </head>
   <body>
-    <div class="address">
-      <p>Home</p>
-      <p>/</p>
-      <p>Men Clothing</p>
-    </div>
     <div class="banner">
       <img
         src="https://images.bewakoof.com/uploads/category/desktop/freegift_desktop1440x250-1654857837.gif"
@@ -293,3 +288,4 @@
     </div>
   </body>
 </html>
+<script src="mens.js"></script>
