added little changes in css

--- a/mens.html
+++ b/mens.html
@@ -22,8 +22,9 @@
       <h5>FILTERS</h5>
       <div class="category">
         <div>
+          <label for="category">Category</label>
           <select name="category" id="category">
-            <option value="Category">Category</option>
+            <option value=""></option>
             <option value="tshirt">T-Shirt</option>
             <option value="boxer">Boxer</option>
             <option value="shorts">Shorts</option>
@@ -65,8 +66,9 @@
         </div>
       </div>
       <div>
+        <label for="sizes">Sizes</label>
         <select name="sizes" id="sizes">
-          <option value="sizes">Sizes</option>
+          <option value="sizes"></option>
           <option value="XS">XS</option>
           <option value="S">S</option>
           <option value="M">M</option>
@@ -94,8 +96,9 @@
         </select>
       </div>
       <div>
+        <label for="brand">Brand</label>
         <select name="brand" id="brand">
-          <option value="brand">Brand</option>
+          <option value="brand"></option>
           <option value="bewakoof">Bewakoof</option>
           <option value="snitch">Snitch</option>
           <option value="alics">Alics</option>
@@ -148,8 +151,9 @@
         </select>
       </div>
       <div>
-        <select name="color" id="colors">
-          <option value="color">Color</option>
+        <label for="color">Color</label>
+        <select name="color" id="color">
+          <option value="color"></option>
           <div>black</div>
           <div>blue</div>
           <div>white</div>
@@ -166,9 +170,10 @@
         </select>
       </div>
       <div>
+        <label for="design">Design</label>
         <select name="design" id="design">
           Design
-          <option value="design">Design</option>
+          <option value="design"></option>
           <option value="solid">Solid</option>
           <option value="printed">Printed</option>
           <option value="graphicprint">Graphic Print</option>
@@ -204,8 +209,9 @@
         </select>
       </div>
       <div>
+        <label for="fit">Fit</label>
         <select name="fit" id="fit">
-          <option value="fit">Fit</option>
+          <option value="fit"></option>
           <option value="regularfit">Regular Fit</option>
           <option value="slimfit">Slim Fit</option>
           <option value="oversized">Oversized</option>
@@ -219,8 +225,9 @@
         </select>
       </div>
       <div>
+        <label for="sleeve">Sleeve</label>
         <select name="sleeve" id="sleeve">
-          <option value="sleeve">Sleeve</option>
+          <option value="sleeve"></option>
           <option value="halfsleeve">Half Sleeve</option>
           <option value="fullsleeve">Full Sleeve</option>
           <option value="sleeveless">Sleeveless</option>
@@ -230,8 +237,9 @@
         </select>
       </div>
       <div>
+        <label for="neck">Neck</label>
         <select name="neck" id="neck">
-          <option value="neck">Neck</option>
+          <option value="neck"></option>
           <option value="roundneck">Round Neck</option>
           <option value="mandarincollar">Mandarin Collar</option>
           <option value="hood">Hood</option>
@@ -255,8 +263,9 @@
         </select>
       </div>
       <div>
+        <label for="ratings">Ratings</label>
         <select name="ratings" id="ratings">
-          <option value="ratings">Ratings</option>
+          <option value="ratings"></option>
           <option value="4.5>">4.5 and Above</option>
           <option value="4>">4 and Above</option>
           <option value="3.5>">3.5 and Above</option>
@@ -265,8 +274,9 @@
         </select>
       </div>
       <div>
+        <label for="discount">Discount</label>
         <select name="discount" id="discount">
-          <option value="discout">Discount</option>
+          <option value="discout"></option>
           <option value="10%>">10% Or More</option>
           <option value="20%>">20% Or More</option>
           <option value="30%>">30% Or More</option>
@@ -277,8 +287,9 @@
         </select>
       </div>
       <div>
+        <label for="sortby">Sort By</label>
         <select name="sortby" id="sort">
-          <option value="sortby">Sort By</option>
+          <option value="sortby"></option>
           <option value="popular">Popular</option>
           <option value="new">New</option>
           <option value="price_htol">Price : High to Low</option>
