--- a/mens.html
+++ b/mens.html
@@ -97,8 +97,8 @@
       </div>
       <div>
         <label for="brand">Brand</label>
-        <select name="brand" id="brand">
-          <option value="brand"></option>
+        <select id="brand">
+          <option value=" "> </option>
           <option value="bewakoof">Bewakoof</option>
           <option value="snitch">Snitch</option>
           <option value="alics">Alics</option>
