--- a/paymentsuccess.html
+++ b/paymentsuccess.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -13,7 +13,7 @@
         <div class="bicon">
           <img
             class="bimage"
-            src="https://images.bewakoof.com/web/bewakoof-primary-logo-white-bg-2x-1635745564.png"
+            src="https://images.bewakoof.com/web/ic-desktop-pride-bwkf-logo.svg"
             alt=""
             srcset=""
             height="35px"
@@ -37,3 +37,4 @@
     </div>
   </body>
 </html>
+<script src="paymentsuccesspage.html"></script>
