--- a/paymentsuccess.html
+++ b/paymentsuccess.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sucess Full</title>
-    <link rel="stylesheet" href="paymentsuccesspage.css" />
+    <link rel="stylesheet" href="paymentsuccess.css" />
   </head>
   <body>
     <div id="container2">
@@ -37,4 +37,4 @@
     </div>
   </body>
 </html>
-<script src="paymentsuccesspage.html"></script>
+<script src="paymentsuccess.html"></script>
