--- a/Mainpage/index.html
+++ b/Mainpage/index.html
@@ -123,6 +123,8 @@
             height: 400px;
             justify-content: space-evenly;
             margin-top: 20px;
+            width: 100%;
+            margin: auto;
         }
 
         #main-best-seller-men>div>img {
@@ -139,7 +141,14 @@
             text-align: center;
             margin-bottom: 15px;
             justify-content: space-evenly;
-            gap: 10%;
+            margin: auto;
+            margin-left: 700px;
+            margin-top: 25px;
+            
+        }
+        .main-h4{
+            margin-top: 10px;
+            margin-left: 600px;
         }
 
         #main-view-all {
@@ -153,6 +162,7 @@
         #box {
             display: flex;
             margin-right: 10px;
+            margin-top: 20px;
         }
 
         #box>div>img {
@@ -219,6 +229,9 @@
 
         #banner0>img {
             width: 100%;
+        }
+        #space{
+            margin-top: 20px;
         }
     </style>
 
@@ -366,7 +379,7 @@
         </div>
     </div>
     <!-- Best Seller for man -->
-    <h3 class="main-h3">BESTSELLER FOR MEN</h3>
+    <h3 class="main-h4">BESTSELLER FOR MEN</h3>
     <div id="main-best-seller-men">
         <div><img src="https://images.bewakoof.com/t320/men-s-black-valhalla-2-0-t-shirt-498402-1652454701-1.jpg"
                 alt="">
@@ -390,8 +403,8 @@
         </div>
 
     </div>
-    <a class="main-h3" href="index.html">VIEW ALL</a>
-    </div>
+   <div id="space"><a class="main-h3" href="index.html">VIEW ALL</a></div>
+    
     <div id="box">
         <div> <img
                 src="https://images.bewakoof.com/uploads/grid/app/new-styles--fresh-looks-banner-1x1-men-1655120135.gif"
@@ -402,7 +415,7 @@
         <div><img src="https://images.bewakoof.com/uploads/grid/app/1x1-joggers-men-1655112462.gif" alt=""></div>
     </div>
 
-    <h3 class="main-h3">T-Shirts Under 299</h3>
+    <h3 class="main-h4">T-Shirts Under 299</h3>
     <div id="daba">
         <div><img src="https://images.bewakoof.com/t320/naasto-full-sleeve-t-shirt-296684-1635868806-1.jpg" alt="">
             <h4>₹245<span>₹599</span></h4>
@@ -438,8 +451,8 @@
         </div>
 
     </div>
-    <a class="main-h3" href="index.html">VIEW ALL</a>
-    <h3 class="main-h3">THE STOOPID COLLECTION</h3>
+   <div id="space"><a class="main-h3" href="index.html">VIEW ALL</a></div> 
+    <h3 class="main-h4">THE STOOPID COLLECTION</h3>
     <div id="jadu">
         <div>
             <img src="https://images.bewakoof.com/uploads/grid/app/Mid-Size-Banner-Boxers-Men-2-1654760055.jpg" alt="">
