--- a/Mainpage/index1.html
+++ b/Mainpage/index1.html
@@ -121,16 +121,17 @@
 
         }
 
-        #main-best-seller-men {
+        #main-best-seller-women {
             display: flex;
             height: 400px;
             justify-content: space-evenly;
             margin-top: 20px;
+            width: 100%;
         }
 
         #main-best-seller-women>div>img {
-            height: 90%;
-
+            height: 75%;
+            width: 95%;
         }
 
         #main-best-seller-women>div>h4>span {
@@ -143,7 +144,12 @@
             text-align: center;
             margin-bottom: 15px;
             justify-content: space-evenly;
-            gap: 10%;
+            margin: auto;
+            margin-left: 700px;
+        }
+        .main-h4{
+            margin-top: 10px;
+            margin-left: 600px;
         }
 
         #main-view-all {
@@ -197,6 +203,7 @@
 
         #jadu1 {
             text-align: center;
+            margin-top: 20px;
         }
 
         #jadu1>div>img {
@@ -364,7 +371,7 @@
     </div>
     <!-- Best Seller for man -->
     <h3 class="main-h3">BESTSELLER FOR WOMEN</h3>
-    <div id="main-best-seller-men">
+    <div id="main-best-seller-women">
         <div><img
                 src="https://images.bewakoof.com/t320/avoiding-resposibilities-boyfriend-t-shirt-509131-1654873610-1.jpg"
                 alt="">
@@ -408,7 +415,7 @@
         <div><img src="https://images.bewakoof.com/uploads/grid/app/1x1-joggers-women-1655112462.gif" alt=""></div>
     </div>
     <a class="main-h3" href="index.html">VIEW ALL</a>
-    <h3 class="main-h3">THE STOOPID COLLECTION</h3>
+    <h3 class="main-h4">THE STOOPID COLLECTION</h3>
     <div id="jadu">
         <div>
             <img src="https://images.bewakoof.com/uploads/grid/app/Mid-Size-Banner-All-Over-Print-Shorts-Women-1654679176.jpg"
