added mensproductpage and its functionality

--- a/mens.html
+++ b/mens.html
@@ -95,7 +95,7 @@
             <option value="Snitch">Snitch</option>
             <option value="Alics">Alics</option>
             <option value="Hangup">Hangup</option>
-            <option value="Campus sutra">Campus Sutra</option>
+            <option value="Campus Sutra">Campus Sutra</option>
             <option value="Dillinger">Dillinger</option>
             <option value="Difference of Opinion">Difference of Opinion</option>
             <option value="Breakbounce">Breakbounce</option>
