--- a/mensproductpage.html
+++ b/mensproductpage.html
@@ -6,10 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mens Product Page</title>
+    <style>
+        
+    </style>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script>
+      $(function(){
+            $('#footer').load('footer.html')
+        })
+        $(function(){
+            $('#navbar').load('navbar.html')
+        })
+    </script>
     <link rel="stylesheet" href="mensproductpage.css" />
 </head>
 
 <body>
+    <div id="navbar"></div>
+        
     <div class="mainbox">
         <div class="childbox1">
             <div class="img">
@@ -147,6 +161,7 @@
             </div>
         </div>
     </div>
+    <div id="footer"></div>
 </body>
 
 </html>
