--- a/mensproductpage.html
+++ b/mensproductpage.html
@@ -23,7 +23,7 @@
 
 <body>
     <div id="navbar"></div>
-        
+    <!-- <div class="path"><div><p><p> Home </p> / Men Clothing</div></p></div>   -->
     <div class="mainbox">
         <div class="childbox1">
             <div class="img">
@@ -32,6 +32,9 @@
         </div>
         <div class="childbox2">
             <div class="features">
+                <div>
+                    
+                </div>
                 <h2>
                     <!-- brand name -->
                 </h2>
