--- a/mens.html
+++ b/mens.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <div id="navbar"></div>
+    <div class="path"><p>Home</p><p> / </p><p> Men Clothing</p></div>
     <div class="banner">
       <img
         src="https://images.bewakoof.com/uploads/category/desktop/freegift_desktop1440x250-1654857837.gif"
