--- a/mens.html
+++ b/mens.html
@@ -19,7 +19,8 @@
   </head>
   <body>
     <div id="navbar"></div>
-    <div class="path"><p>Home</p><p> / </p><p> Men Clothing</p></div>
+    <div class="path">
+      <div>Home</div><div> / </div> <div>Men Clothing</div> </div></div>
     <div class="banner">
       <img
         src="https://images.bewakoof.com/uploads/category/desktop/freegift_desktop1440x250-1654857837.gif"
