--- a/payment.html
+++ b/payment.html
@@ -78,7 +78,7 @@
         <input type="text" id="card-name" placeholder="Name on Card" />
         <div id="card-payment-div2">
           <input type="checkbox" id="card-checkbox" />
-          <label id="card-payment-para1">Securely save this card for faster payments.</label>
+          <label id="card-payment-para1">Save card details for later</label>
         </div>
         <p>
           This transaction you make is totally secure. We don't save your
@@ -130,7 +130,7 @@
 
 
         </div>
-        <button>VERIFY</button>
+        <button id="verify-button">VERIFY</button>
       </div>
       <div id="payment-net-banking">
         <div>
@@ -166,7 +166,7 @@
         <div>
          <p>Cash Collection Charges:Costs ₹ 30 Extra</p>
         </div>
-        <button>PAY NOW</button>
+        <button id="paynow-button">PAY NOW</button>
        </div>
        <div id="payment-bnpl">
         <div>
