--- a/login.html
+++ b/login.html
@@ -417,9 +417,9 @@
         </div>
         <div id="nav_bar_search">
             <div id="logo_menu">
-                <li><a href="#"><img src="https://images.bewakoof.com/web/ic-desktop-pride-bwkf-logo.svg"
+                <li><a href="./index.html"><img src="https://images.bewakoof.com/web/ic-desktop-pride-bwkf-logo.svg"
                             alt="logo"></a></li>
-                <li><a href="#">MEN</a>
+                <li><a href="./menspage.html">MEN</a>
                     <div id="logo_sub_menu1">
                         <div id="sub_menu_item">
                             <ul>
@@ -469,7 +469,7 @@
 
                     </div>
                 </li>
-                <li><a href="#">WOMEN</a>
+                <li><a href="./womenpage.html">WOMEN</a>
                     <div id="logo_sub_menu2">
                         <div id="sub_menu_item">
                             <ul>
@@ -529,7 +529,7 @@
 
                     </div>
                 </li>
-                <li><a href="#">MOBILE COVER</a>
+                <li><a href="./index.html">MOBILE COVER</a>
                     <div id="logo_sub_menu3">
                         <div id="sub_menu_item">
                             <ul>
@@ -606,9 +606,9 @@
             <div id="nav_search_bar">
                 <li><input type="text" id="search_product_by_name"
                         placeholder="search by product,category or collection"></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#"><span><i class="far fa-heart"></i></span></a></li>
-                <li><a href="#"><span><i class="fas fa-lock"></i></span></a></li>
+                <li><a href="./login.html">Login</a></li>
+                <li><a href="./wishlist.html"><span><i class="far fa-heart"></i></span></a></li>
+                <li><a href="./cartpage.html"><span><i class="fas fa-lock"></i></span></a></li>
             </div>
 
         </div>
