--- a/signin.html
+++ b/signin.html
@@ -27,7 +27,7 @@
       <div id="nav_bar_search">
           <div id="logo_menu">
               <li><a href="#"><img src="https://images.bewakoof.com/web/ic-desktop-pride-bwkf-logo.svg" alt="logo"></a></li>
-              <li><a href="#">MEN</a>
+              <li><a href="./menspage.html">MEN</a>
                <div id="logo_sub_menu1">
                    <div id="sub_menu_item"><ul>
                        <li><a href="#">TopWear</a></li>
@@ -73,7 +73,7 @@
                     
                </div>
               </li>
-              <li><a href="#">WOMEN</a>
+              <li><a href="./womenpage.html">WOMEN</a>
                   <div id="logo_sub_menu2">
                       <div id="sub_menu_item"><ul>
                           <li><a href="#">x</a></li>
@@ -127,7 +127,7 @@
                      </div>
                     
                   </div></li>
-              <li><a href="#">MOBILE COVER</a>
+              <li><a href="./index.html">MOBILE COVER</a>
                   <div id="logo_sub_menu3">
                       <div id="sub_menu_item"><ul>
                           <li><a href="#"><h2>POPULAR</h2></a></li>
@@ -203,7 +203,7 @@
                 <h2>Log In/Sign In</h2>
                 <br><p>for Latest treds, exciting offers and everything Bewakoof!</p></br>
                 <input id="phone" type="tel" data-phonecode="+91" placeholder="Enter Moblie Number" /><br />
-               <button id="click" type="submit">Countinue</button><br />
+               <button id="click" type="submit"><a href="./index.html"> Countinue</button> </a><br />
                </div>
                <div>
                 <hr>
