footer added in womenpage

--- a/womenClick.html
+++ b/womenClick.html
@@ -12,7 +12,7 @@
     crossorigin="anonymous"></script>
     <script>
         $(function(){
-            $('#footer').load('footer.html')
+            $('#footer').load('footercopy.html')
         })
     </script>
     <style>
