--- a/womenpage.html
+++ b/womenpage.html
@@ -16,7 +16,7 @@
     crossorigin="anonymous"></script>
     <script>
         $(function(){
-            $('#footer').load('footer.html')
+            $('#footer').load('footercopy.html')
         })
     </script>
     
@@ -146,7 +146,7 @@
         }
         #footer{
             background-color: #181818;
-            margin-top: -150px;
+            margin-top: -100px;
         }
     </style>
     
