footer added in all

--- a/footercopy.html
+++ b/footercopy.html
@@ -63,7 +63,7 @@
             width: 95%;
             justify-content: center;
         }
-        h3{
+        .footer-container > div h3{
             color: white;
         }
         h2{
