--- a/index-women.html
+++ b/index-women.html
@@ -6,6 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Women Home Page</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+    <script>
+        $(function(){
+            $('#footer').load('footercopy.html')
+        })
+    </script>
     <link rel="stylesheet" href="./style/navbar.css">
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -472,7 +479,7 @@
     </div>
 
     <!-- Footer -->
-    <div id="footer-part">
+    <div id="footer">
 
         <!-- footer-part div start -->
 
