--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Men Home Page</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+    <script>
+        $(function(){
+            $('#footer').load('footercopy.html')
+        })
+    </script>
     <link rel="stylesheet" href="./style/navbar.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <link rel="stylesheet" href="./styles/footerstyles.css" />
@@ -480,7 +487,7 @@
     </div>
 
      <!-- Footer -->
-    <div ></div>
+    <div id="footer"></div>
 
 
   </body>
